apps/dev/vaultwarden/restore-ui-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-restore-ui
  namespace: vaultwarden
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vw-restore.stadthagen.dev`)
      kind: Rule
      middlewares:
        - name: vw-restore-authentik
      services:
        - name: vaultwarden-restore-ui
          port: 8080
  tls:
    secretName: vw-restore-tls
